--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,21 @@
           autocomplete="off"
           placeholder="Search images..."
         />
-        <button type="submit">Search</button>
+        <button class="right-btn" type="submit">
+          <svg class="btn-icon" width="24" height="24">
+            <use href="./css/symbol-defs.svg#icon-angel-right"></use>
+          </svg>
+        </button>
       </form>
     </div>
     <div class="gallery"></div>
-    <button type="button" class="load-more">Load more</button>
 
+    <button type="button" class="up-btn is-hidden">
+      <svg class="btn-icon" width="24" height="24">
+        <use href="./css/symbol-defs.svg#icon-angel-up"></use>
+      </svg>
+    </button>
+    <div class="scroll-area"></div>
     <script src="index.js" type="module"></script>
   </body>
 </html>
